--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -2,7 +2,7 @@ blueprint:
   name: ZHA Philips Hue Dimmer Switch (RWL022) (Scene Preset)
   description: >
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
-    Version 1.4.0
+    Version 1.5.0
   domain: automation
   input:
     dimmer_switch:
@@ -24,7 +24,7 @@ blueprint:
     tv_entity:
       name: TV Entity
       description: The TV entity to check (optional)
-      default:
+      default: ""
       selector:
         entity:
           domain:
@@ -195,14 +195,9 @@ trigger:
     event_type: zha_event
     event_data:
       device_id: !input dimmer_switch
-  - choose:
-      - conditions:
-          - condition: template
-            value_template: "{{ tv_entity is not none and tv_entity != '' }}"
-        sequence:
-          - platform: state
-            entity_id: !input tv_entity
-            to: "on"
+  - platform: state
+    entity_id: !input tv_entity
+    to: "on"
 action:
   - variables:
       command: "{{ trigger.event.data.command if trigger.event is defined else 'tv_on' }}"
@@ -213,7 +208,7 @@ action:
       lights_when_tv_on: !input lights_when_tv_on
       all_lights: !input light
       target_lights: >
-        {% set tv_on = tv_entity and tv_entity != '' and is_state(tv_entity, 'on') %}
+        {% set tv_on = tv_entity and is_state(tv_entity, 'on') %}
         {% set valid_tv_lights = (lights_when_tv_on if lights_when_tv_on is sequence else [lights_when_tv_on]) | select('string') | list %}
         {% set valid_all_lights = (all_lights if all_lights is sequence else [all_lights]) | select('string') | list %}
         {% if tv_on and valid_tv_lights %}
@@ -224,7 +219,7 @@ action:
           []
         {% endif %}
       lights_to_turn_off: >
-        {% set tv_on = tv_entity and tv_entity != '' and is_state(tv_entity, 'on') %}
+        {% set tv_on = tv_entity and is_state(tv_entity, 'on') %}
         {% set valid_tv_lights = (lights_when_tv_on if lights_when_tv_on is sequence else [lights_when_tv_on]) | select('string') | list %}
         {% set valid_all_lights = (all_lights if all_lights is sequence else [all_lights]) | select('string') | list %}
         {% if tv_on and valid_tv_lights %}
@@ -244,7 +239,6 @@ action:
         {% else %}
           1
         {% endif %}
-
   - choose:
       - conditions:
           - "{{ lights_to_turn_off | length > 0 }}"
@@ -254,7 +248,6 @@ action:
               entity_id: "{{ lights_to_turn_off }}"
             data:
               transition: !input transition_time
-
   - choose:
       - conditions:
           - "{{ command == 'tv_on' }}"
@@ -264,7 +257,6 @@ action:
               entity_id: "{{ lights_to_turn_off }}"
             data:
               transition: !input transition_time
-
       - conditions:
           - "{{ command == 'on_press' }}"
         sequence:
@@ -289,7 +281,6 @@ action:
                     data:
                       targets:
                         entity_id: "{{ target_lights }}"
-
       - conditions:
           - "{{ command == 'on_double_press' }}"
         sequence:
