--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -2,7 +2,7 @@ blueprint:
   name: ZHA Philips Hue Dimmer Switch (RWL022) (Scene Preset)
   description: >
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
-    Version 1.7.0
+    Version 1.8.0
   domain: automation
   input:
     dimmer_switch:
@@ -39,6 +39,18 @@ blueprint:
           domain:
             - light
           multiple: true
+    tv_time_start:
+      name: TV Time Start
+      description: Start time for TV-based logic (optional, format HH:MM)
+      default: ""
+      selector:
+        time:
+    tv_time_end:
+      name: TV Time End
+      description: End time for TV-based logic (optional, format HH:MM)
+      default: "03:00"
+      selector:
+        time:
     included_scenes:
       name: Hue Button Scenes
       description: Scenes to be included. The first scene will be used only for the main ON button.
@@ -188,12 +200,6 @@ blueprint:
           step: 1.0
           unit_of_measurement: s
           mode: slider
-    tv_time_start:
-      name: TV Time Start
-      description: Start time for TV-based logic (optional, format HH:MM)
-      default: ""
-      selector:
-        time:
 mode: queued
 max_exceeded: silent
 trigger:
@@ -211,14 +217,16 @@ action:
       lights_when_tv_on: !input lights_when_tv_on
       all_lights: !input light
       tv_time_start: !input tv_time_start
-      tv_time_end: "03:00"
+      tv_time_end: !input tv_time_end
       is_tv_time: >
-        {% set now = now().strftime('%H:%M') %}
+        {% set now = now().time() %}
         {% if tv_time_start and tv_time_end %}
-          {% if tv_time_start <= tv_time_end %}
-            {{ now >= tv_time_start and now < tv_time_end }}
+          {% set start = strptime(tv_time_start, "%H:%M").time() %}
+          {% set end = strptime(tv_time_end, "%H:%M").time() %}
+          {% if start <= end %}
+            {{ now >= start and now < end }}
           {% else %}
-            {{ now >= tv_time_start or now < tv_time_end }}
+            {{ now >= start or now < end }}
           {% endif %}
         {% else %}
           true
