--- a/sunAlarm.yaml
+++ b/sunAlarm.yaml
@@ -1,6 +1,9 @@
 blueprint:
   name: Wake-up light alarm with sunrise effect
-  description: "A wake-up light alarm with a brightness and color temperature sunrise effect. Requires date_time_iso sensor in configuration."
+  description: >
+    A wake-up light alarm with a brightness and color temperature sunrise effect.
+    Requires date_time_iso sensor in configuration.
+    Version: 1.0.0
   domain: automation
   input:
     light_entity:
