--- a/sunAlarm.yaml
+++ b/sunAlarm.yaml
@@ -5,6 +5,8 @@ blueprint:
     Requires date_time_iso sensor in configuration.
     Version: 1.1.1
   domain: automation
+  homeassistant:
+    min_version: "2023.1.0"
   input:
     light_entity:
       name: Wake-up light entity
@@ -25,6 +27,7 @@ blueprint:
           mode: slider
     end_brightness:
       name: Ending brightness
+      description: The final brightness level of the light at the end of the sunrise effect.
       default: 100
       selector:
         number:
@@ -62,7 +65,7 @@ action:
       end_time: "{{ now() + timedelta(minutes=sunrise_duration) }}"
 
   # Set initial state
-  - service: light.turn_on
+  - action: light.turn_on
     target:
       entity_id: !input light_entity
     data:
@@ -78,7 +81,7 @@ action:
           state: "on"
         - variables:
             progress: "{{ repeat.index / (sunrise_duration * 60) }}"
-        - service: light.turn_on
+        - action: light.turn_on
           target:
             entity_id: !input light_entity
           data:
