--- a/sunAlarm.yaml
+++ b/sunAlarm.yaml
@@ -2,7 +2,7 @@ blueprint:
   name: Wake-up light alarm with realistic sunrise effect
   description: >
     A wake-up light alarm with a realistic brightness and color temperature sunrise effect.
-    Version: 1.1.2
+    Version: 1.3.0
   domain: automation
   homeassistant:
     min_version: "2023.1.0"
@@ -52,7 +52,8 @@ variables:
   sunrise_duration: !input sunrise_duration
   start_brightness: 1
   end_brightness: !input end_brightness
-  seconds: "{{ sunrise_duration * 60 }}"
+  total_steps: "{{ end_brightness - start_brightness }}"
+  step_duration: "{{ (sunrise_duration * 60) / total_steps }}"
   start_color: [255, 0, 0] # Deep red
   mid_color1: [255, 60, 0] # Orange-red
   mid_color2: [255, 120, 0] # Orange
@@ -61,14 +62,10 @@ variables:
   keep_on_duration: !input keep_on_duration
 
 trigger:
-  - platform: event
+  - trigger: event
     event_type: sunrise_alarm_start
 
 action:
-  - variables:
-      start_time: "{{ now() }}"
-      end_time: "{{ now() + timedelta(minutes=sunrise_duration) }}"
-
   # Set initial state
   - action: light.turn_on
     target:
@@ -79,20 +76,19 @@ action:
       transition: 1
 
   - repeat:
-      count: "{{ (sunrise_duration * 60) | int }}"
+      count: "{{ total_steps }}"
       sequence:
         - condition: state
           entity_id: !input light_entity
           state: "on"
         - variables:
-            progress: "{{ repeat.index / (sunrise_duration * 60) }}"
+            progress: "{{ repeat.index / total_steps }}"
+            current_brightness: "{{ start_brightness + repeat.index }}"
         - action: light.turn_on
           target:
             entity_id: !input light_entity
           data:
-            brightness: >
-              {{ ((start_brightness + (end_brightness - start_brightness) 
-              * (progress ** 2) * (3 - 2 * progress)) * 2.55) | round }}
+            brightness: "{{ current_brightness }}"
             rgb_color: >
               {% if progress < 0.25 %}
                 {% set f = progress * 4 %}
@@ -123,9 +119,9 @@ action:
                   (mid_color3[2] + (end_color[2] - mid_color3[2]) * f) | round
                 ] }}
               {% endif %}
-            transition: 1
+            transition: "{{ step_duration }}"
         - delay:
-            seconds: 1
+            seconds: "{{ step_duration }}"
         - if:
             - condition: or
               conditions:
@@ -133,7 +129,7 @@ action:
                   entity_id: !input light_entity
                   state: "off"
                 - condition: template
-                  value_template: "{{ repeat.index == (sunrise_duration * 60) - 1 }}"
+                  value_template: "{{ repeat.index == total_steps - 1 }}"
           then:
             - choose:
                 - conditions:
@@ -144,7 +140,7 @@ action:
                     - stop: "Light turned off, aborting sunrise"
                 - conditions:
                     - condition: template
-                      value_template: "{{ repeat.index == (sunrise_duration * 60) - 1 }}"
+                      value_template: "{{ repeat.index == total_steps - 1 }}"
                   sequence:
                     - if:
                         condition: template
