--- a/sunAlarm.yaml
+++ b/sunAlarm.yaml
@@ -2,7 +2,7 @@ blueprint:
   name: Wake-up light alarm with realistic sunrise effect
   description: >
     A wake-up light alarm with a realistic brightness and color temperature sunrise effect.
-    Version: 1.3.0
+    Version: 1.3.1
   domain: automation
   homeassistant:
     min_version: "2023.1.0"
@@ -54,11 +54,13 @@ variables:
   end_brightness: !input end_brightness
   total_steps: "{{ (end_brightness * 2.55) | round(0) }}"
   step_duration: "{{ (sunrise_duration | float) / total_steps }}"
-  start_color: [255, 0, 0] # Deep red
-  mid_color1: [255, 60, 0] # Orange-red
-  mid_color2: [255, 120, 0] # Orange
-  mid_color3: [255, 180, 0] # Yellow-orange
-  end_color: [255, 255, 200] # Warm white
+  color_steps: [
+      [255, 0, 0], # Deep red
+      [255, 60, 0], # Orange-red
+      [255, 120, 0], # Orange
+      [255, 180, 0], # Yellow-orange
+      [255, 255, 200], # Warm white
+    ]
   keep_on_duration: !input keep_on_duration
 
 trigger:
@@ -72,8 +74,10 @@ action:
       entity_id: !input light_entity
     data:
       brightness: "{{ start_brightness }}"
-      rgb_color: "{{ start_color }}"
-      transition: 1
+      rgb_color: "{{ color_steps[0] }}"
+      transition: "{{ step_duration * 60 }}"
+  - delay:
+      seconds: "{{ (step_duration * 60) | round(0) }}"
 
   - repeat:
       count: "{{ total_steps }}"
@@ -84,41 +88,22 @@ action:
         - variables:
             progress: "{{ repeat.index / total_steps }}"
             current_brightness: "{{ start_brightness + repeat.index }}"
+            color_progress: "{{ progress * (color_steps | length - 1) }}"
+            color_index: "{{ color_progress | int }}"
         - action: light.turn_on
           target:
             entity_id: !input light_entity
           data:
             brightness: "{{ current_brightness }}"
             rgb_color: >
-              {% if progress < 0.25 %}
-                {% set f = progress * 4 %}
-                {{ [
-                  (start_color[0] + (mid_color1[0] - start_color[0]) * f) | round,
-                  (start_color[1] + (mid_color1[1] - start_color[1]) * f) | round,
-                  (start_color[2] + (mid_color1[2] - start_color[2]) * f) | round
-                ] }}
-              {% elif progress < 0.5 %}
-                {% set f = (progress - 0.25) * 4 %}
-                {{ [
-                  (mid_color1[0] + (mid_color2[0] - mid_color1[0]) * f) | round,
-                  (mid_color1[1] + (mid_color2[1] - mid_color1[1]) * f) | round,
-                  (mid_color1[2] + (mid_color2[2] - mid_color1[2]) * f) | round
-                ] }}
-              {% elif progress < 0.75 %}
-                {% set f = (progress - 0.5) * 4 %}
-                {{ [
-                  (mid_color2[0] + (mid_color3[0] - mid_color2[0]) * f) | round,
-                  (mid_color2[1] + (mid_color3[1] - mid_color2[1]) * f) | round,
-                  (mid_color2[2] + (mid_color3[2] - mid_color2[2]) * f) | round
-                ] }}
-              {% else %}
-                {% set f = (progress - 0.75) * 4 %}
-                {{ [
-                  (mid_color3[0] + (end_color[0] - mid_color3[0]) * f) | round,
-                  (mid_color3[1] + (end_color[1] - mid_color3[1]) * f) | round,
-                  (mid_color3[2] + (end_color[2] - mid_color3[2]) * f) | round
-                ] }}
-              {% endif %}
+              {% set start = color_steps[color_index] %}
+              {% set end = color_steps[color_index + 1] %}
+              {% set fraction = color_progress - color_index %}
+              {{ [
+                (start[0] + (end[0] - start[0]) * fraction) | round,
+                (start[1] + (end[1] - start[1]) * fraction) | round,
+                (start[2] + (end[2] - start[2]) * fraction) | round
+              ] }}
             transition: "{{ step_duration * 60 }}"
         - delay:
             seconds: "{{ (step_duration * 60) | round(0) }}"
@@ -151,6 +136,8 @@ action:
                         - action: light.turn_off
                           target:
                             entity_id: !input light_entity
+                          data:
+                            transition: 30
                     - stop: "Sunrise complete"
 
 mode: single
