--- a/sunAlarm.yaml
+++ b/sunAlarm.yaml
@@ -1,8 +1,7 @@
 blueprint:
-  name: Wake-up light alarm with realistic sunrise effect
+  name: Wake-up light alarm with realistic sunrise effect. Version: 1.4.1
   description: >
     A wake-up light alarm with a realistic brightness and color temperature sunrise effect.
-    Version: 1.4.1
   domain: automation
   homeassistant:
     min_version: "2023.1.0"
