--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -1,8 +1,7 @@
 blueprint:
-  name: ZHA Philips Hue Dimmer Switch (RWL022) (Scene Preset)
+  name: "ZHA Philips Hue Dimmer Switch (RWL022) (Scene Preset). Version: 1.7.0"
   description: >
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
-    Version 1.7.0
   domain: automation
   input:
     dimmer_switch:
