--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: ZHA Philips Hue Dimmer Switch (RWL020) v.1.1.0
+  name: ZHA Philips Hue Dimmer Switch (RWL020) v.1.2.0
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -92,7 +92,7 @@ blueprint:
           step: 1
           unit_of_measurement: s
 
-mode: restart
+mode: queued
 max_exceeded: silent
 trigger:
   - platform: event
